<resources>
    <string name="app_name">DistantControll2</string>
    <string name="first_model">First</string>
    <string name="second_model">Second</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left_wheel">Left Wheel</string>
    <string name="right_wheel">Right Wheel</string>
    <string name="connection_button">Connect</string>>
    <string name="disconnection_button">Disconnect</string>
    <string name="change_control_button">Control</string>
    <string name="connection_complete">Connection complete</string>
    <string name="connection_fails">Connection fails</string>
    <string name="connection_closed">Connection closed</string>
    <!-- Preference Titles -->
    <string name="messages_header">Color settings</string>

    <!-- Color settings -->
    <string name="joystick_color_stick">Stick</string>
    <string name="joystick_color_background">Joystick background</string>
    <string name="joystick_color_border">Joystick border</string>

</resources>